[package]

name = "rlibc"
version = "0.1.4"
authors = ["The Rust Project Developers"]

license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/rlibc"
homepage = "https://github.com/rust-lang/rlibc"
description = """
A bare-metal library supplying certain libc functions like memcpy,
memmove, memset and memcmp. This is designed for use in freestanding
environments where another libc does not exist, since rustc may
implicitly insert calls to such functions.
"""
